// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CookieBanner should hide the banner on click 1`] = `
<CookieBanner
  render={[Function]}
>
  <Banner
    className="cookie-banner"
    open={true}
    position="bottom"
  >
    <div
      className="banner open bottom cookie-banner"
    >
      <Container>
        <div
          className="container"
        >
          <Row>
            <div
              className="row"
            >
              <Column
                xs={10}
              >
                <div
                  className="column xs-10"
                >
                  <p>
                    We use cookies! Roe is awesome
                  </p>
                </div>
              </Column>
              <Column
                xs={2}
              >
                <div
                  className="column xs-2"
                >
                  <Button
                    className="margin-top-base float-right"
                    onClick={[Function]}
                  >
                    <button
                      className="button margin-top-base float-right"
                      onClick={[Function]}
                    >
                      Accept
                    </button>
                  </Button>
                </div>
              </Column>
            </div>
          </Row>
        </div>
      </Container>
    </div>
  </Banner>
</CookieBanner>
`;

exports[`CookieBanner should hide the banner on click 2`] = `
<CookieBanner
  render={[Function]}
>
  <Banner
    className="cookie-banner"
    open={false}
    position="bottom"
  >
    <div
      className="banner bottom cookie-banner"
    >
      <Container>
        <div
          className="container"
        >
          <Row>
            <div
              className="row"
            >
              <Column
                xs={10}
              >
                <div
                  className="column xs-10"
                >
                  <p>
                    We use cookies! Roe is awesome
                  </p>
                </div>
              </Column>
              <Column
                xs={2}
              >
                <div
                  className="column xs-2"
                >
                  <Button
                    className="margin-top-base float-right"
                    onClick={[Function]}
                  >
                    <button
                      className="button margin-top-base float-right"
                      onClick={[Function]}
                    >
                      Accept
                    </button>
                  </Button>
                </div>
              </Column>
            </div>
          </Row>
        </div>
      </Container>
    </div>
  </Banner>
</CookieBanner>
`;

exports[`CookieBanner should match snapshot and take required render prop 1`] = `
<div
  className="banner open bottom cookie-banner"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="column xs-10"
      >
        <p>
          We use cookies! Roe is awesome
        </p>
      </div>
      <div
        className="column xs-2"
      >
        <button
          className="button margin-top-base float-right"
          onClick={[Function]}
        >
          Accept
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CookieBanner should take an optional position prop 1`] = `
<div
  className="banner open top cookie-banner"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="column xs-10"
      >
        <p>
          We use cookies! Roe is awesome
        </p>
      </div>
      <div
        className="column xs-2"
      >
        <button
          className="button margin-top-base float-right"
          onClick={[Function]}
        >
          Accept
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CookieBanner should take regular element attributes 1`] = `
<div
  className="banner open bottom cookie-banner my-class"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="column xs-10"
      >
        <p>
          We use cookies! Roe is awesome
        </p>
      </div>
      <div
        className="column xs-2"
      >
        <button
          className="button margin-top-base float-right"
          onClick={[Function]}
        >
          Accept
        </button>
      </div>
    </div>
  </div>
</div>
`;
